<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.whofaster.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/player_a"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/player_a_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:rotation="180">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addTwoForPlayerB"
                    android:text="@string/medium_plus" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addOneForPlayerB"
                    android:text="@string/normal_plus" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addThreeForPlayerB"
                    android:text="@string/large_plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/player_a_buttons"
                android:rotation="180">

                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="player B" />

                        <TextView
                            android:id="@+id/targetOfPlayerB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="目标分：144" />

                        <TextView
                            android:id="@+id/currentOfPlayerB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="自己分数：3" />

                        <TextView
                            android:id="@+id/eyeOfPlayerA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="敌方分数：10" />

                        <TextView
                            android:id="@+id/messageBoxB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="" />

                    </LinearLayout>

                </ScrollView>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/blockOfPlayerB"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:ems="6"
                        android:gravity="center_horizontal"
                        android:text=""
                        android:textSize="10sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ToggleButton
                        android:id="@+id/startPlayerB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOff="@string/begin"
                        android:textOn="@string/end" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/controlKeyOfPlayerA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addTwoForPlayerA"
                    android:text="@string/medium_plus" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addOneForPlayerA"
                    android:text="@string/normal_plus" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addThreeForPlayerA"
                    android:text="@string/large_plus" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/controlKeyOfPlayerA"
                android:layout_alignParentTop="true">

                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_of_player_a" />

                        <TextView
                            android:id="@+id/targetOfPlayerA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/game_target" />

                        <TextView
                            android:id="@+id/currentOfPlayerA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/current_score" />

                        <TextView
                            android:id="@+id/eyeOfPlayerB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/current_other" />

                        <TextView
                            android:id="@+id/messageBoxA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/current_other" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/current_other" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/current_other" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/current_other" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/current_other" />
                    </LinearLayout>

                </ScrollView>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/blockOfPlayerA"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:ems="6"
                        android:gravity="center_horizontal"
                        android:text=""
                        android:textSize="10sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ToggleButton
                        android:id="@+id/startPlayerA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOff="@string/begin"
                        android:textOn="@string/end" />
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
